added color picker and nicer form, changed font

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -4,3 +4,78 @@ body {
   background-color: #000;
   margin: 0;
 }
+
+a,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+input,
+div,
+span,
+button,
+textarea,
+label,
+select,
+option,
+form,
+table,
+tr,
+td,
+th,
+tbody,
+thead,
+tfoot,
+dl,
+dt,
+dd,
+blockquote,
+pre,
+code,
+img,
+svg,
+i,
+b,
+u,
+em,
+strong,
+small,
+sub,
+sup,
+abbr,
+address,
+cite,
+dfn,
+kbd,
+q,
+samp,
+var,
+hr,
+fieldset,
+legend,
+caption,
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  font-family: 'PT Mono', monospace;
+}
