--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -3,7 +3,7 @@ body {
   font-family: 'PT Mono', monospace;
   background-color: #000;
   margin: 0;
-  overscroll-behavior-y: contain;
+  overscroll-behavior-y: none;
 }
 
 a,
