--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -1,82 +1,82 @@
-html,
-body {
-  font-family: 'PT Mono', monospace;
-  background-color: #000;
-  margin: 0;
-  overscroll-behavior-y: none;
-}
-
 a,
-p,
+abbr,
+address,
+article,
+aside,
+audio,
+b,
+blockquote,
+body,
+button,
+caption,
+cite,
+code,
+dd,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
-ul,
-ol,
-li,
-input,
-div,
-span,
-button,
-textarea,
-label,
-select,
-option,
-form,
-table,
-tr,
-td,
-th,
-tbody,
-thead,
-tfoot,
-dl,
-dt,
-dd,
-blockquote,
-pre,
-code,
-img,
-svg,
-i,
-b,
-u,
-em,
-strong,
-small,
-sub,
-sup,
-abbr,
-address,
-cite,
-dfn,
-kbd,
-q,
-samp,
-var,
-hr,
-fieldset,
-legend,
-caption,
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
 header,
 hgroup,
+hr,
+html,
+i,
+img,
+input,
+kbd,
+label,
+legend,
+li,
 main,
+mark,
 menu,
 nav,
+ol,
+option,
+p,
+pre,
+q,
+samp,
 section,
+select,
+small,
+span,
+strong,
+sub,
 summary,
+sup,
+svg,
+table,
+tbody,
+td,
+textarea,
+tfoot,
+th,
+thead,
 time,
-mark,
-audio,
+tr,
+u,
+ul,
+var,
 video {
   font-family: 'PT Mono', monospace;
+}
+body,
+html {
+  background-color: #000;
+  margin: 0;
+  overscroll-behavior-y: none;
 }
